--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,10 @@
     "@types/node": "^18.0.0",
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
-    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "ts-node": "^10.8.1"
   }
 }
