--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
+    "ts-node": "^10.8.1",
     "typescript": "4.4.4"
   },
   "resolutions": {
